# pseudoalign

./: .gitignore  CMakeLists.txt  README.md  compare_errors.py  compare_full.py  compare_sam.py  dbg_kmer.cpp  error_report.py  main.cpp  plot_results.py  run.sh  run_tests.sh
src/: dbg.cpp  dbg.hpp  em.cpp  em.hpp  fasta.cpp  fasta.hpp  fastq.hpp  hash_map.hpp  kmer.hpp  pseudoalign.cpp  pseudoalign.hpp
tests/: test_dbg.cpp  test_pseudoalign.cpp  test_pseudoalign_em.cpp
tests/data/: exon.fa  medium.fa  medium.fastq
